--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.4",
+    "prop-types": "^15.5.8",
     "react-input-autosize": "^0.6.13"
   },
   "devDependencies": {
@@ -19,6 +20,7 @@
     "babel-eslint": "^4.1.3",
     "chai": "^3.5.0",
     "coveralls": "^2.11.9",
+    "create-react-class": "^15.6.2",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.15.0",
     "gulp": "^3.9.1",
@@ -26,11 +28,11 @@
     "istanbul": "^0.4.3",
     "jsdom": "^8.4.1",
     "mocha": "^2.4.5",
-    "react": "^15.0",
+    "react": "^15.5.0",
     "react-addons-shallow-compare": "^15.0.1",
     "react-addons-test-utils": "^15.0",
     "react-component-gulp-tasks": "^0.7.7",
-    "react-dom": "^15.0",
+    "react-dom": "^15.5.0",
     "react-gravatar": "^2.4.3",
     "react-virtualized": "^6.3.0",
     "react-virtualized-select": "^0.0.4",
@@ -41,8 +43,8 @@
     "unexpected-sinon": "^10.2.0"
   },
   "peerDependencies": {
-    "react": "^0.14 || ^15.0.0-rc || ^15.0",
-    "react-dom": "^0.14 || ^15.0.0-rc || ^15.0"
+    "react": "^0.14.9 || ^15.3.0 || ^16.0.0-rc || ^16.0",
+    "react-dom": "^0.14.9 || ^15.3.0 || ^16.0.0-rc || ^16.0"
   },
   "browserify-shim": {
     "classnames": "global:classNames",
